--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        kotlinVersion = '1.2.20'
+        kotlinVersion = '1.2.21'
         springBootVersion = '1.5.10.RELEASE'
     }
     repositories {
@@ -14,52 +14,57 @@ buildscript {
     }
 }
 
-apply plugin: 'idea'
-apply plugin: 'java'
-apply plugin: 'kotlin'
-apply plugin: 'kotlin-spring'
-apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
+subprojects {
+    apply plugin: 'idea'
+    apply plugin: 'java'
+    apply plugin: 'kotlin'
 
-group = 'com.zlrx.visualizer'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 1.8
-compileKotlin {
-    kotlinOptions {
-        freeCompilerArgs = ["-Xjsr305=strict"]
-        jvmTarget = "1.8"
+    group = 'com.zlrx.visualizer'
+    version = '0.0.1'
+    sourceCompatibility = 1.8
+
+    compileKotlin {
+        kotlinOptions {
+            freeCompilerArgs = ["-Xjsr305=strict"]
+            jvmTarget = "1.8"
+        }
     }
-}
-compileTestKotlin {
-    kotlinOptions {
-        freeCompilerArgs = ["-Xjsr305=strict"]
-        jvmTarget = "1.8"
+    compileTestKotlin {
+        kotlinOptions {
+            freeCompilerArgs = ["-Xjsr305=strict"]
+            jvmTarget = "1.8"
+        }
     }
-}
 
-idea {
-    module {
-        inheritOutputDirs = false
-        outputDir = file("$buildDir/classes/main/")
+    idea {
+        module {
+            inheritOutputDirs = false
+            outputDir = file("$buildDir/classes/main/")
+        }
     }
+
+    repositories {
+        maven { url 'https://repo.gradle.org/gradle/libs-releases-local/' }
+        mavenCentral()
+    }
+
+    dependencies {
+        compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
+        compile("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
+        compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.20'
+        compile group: 'org.gradle', name: 'gradle-tooling-api', version: '4.1'
+        compile group: 'javax.inject', name: 'javax.inject', version: '1'
+        compileOnly group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.12'
+        compileOnly group: 'org.gradle', name: 'gradle-core', version: '4.1'
+
+        compileOnly group: 'org.gradle', name: 'gradle-base-services', version: '4.1'
+        compileOnly group: 'org.gradle', name: 'gradle-resources', version: '4.1'
+        compileOnly group: 'org.gradle', name: 'gradle-model-core', version: '4.1'
+        compileOnly group: 'org.gradle', name: 'gradle-wrapper', version: '4.1'
+        compileOnly group: 'org.gradle', name: 'gradle-base-services-groovy', version: '4.1'
+    }
+
 }
 
-repositories {
-    maven { url 'https://repo.gradle.org/gradle/libs-releases-local/' }
-    mavenCentral()
-}
 
 
-dependencies {
-    compile('org.springframework.boot:spring-boot-starter-cache')
-    compile('org.springframework.boot:spring-boot-starter-web')
-    compile('com.fasterxml.jackson.module:jackson-module-kotlin')
-    compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
-    compile("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
-    compileOnly('org.projectlombok:lombok')
-    compile group: 'org.gradle', name: 'gradle-tooling-api', version: '4.1'
-    compileOnly group: 'org.gradle', name: 'gradle-core', version: '4.1'
-
-
-    testCompile('org.springframework.boot:spring-boot-starter-test')
-}
