--- a/visualizer-server/src/main/resources/project-init.gradle
+++ b/visualizer-server/src/main/resources/project-init.gradle
@@ -1,9 +1,14 @@
 initscript {
+    repositories {
+        maven { url 'https://repo.gradle.org/gradle/libs-releases-local/' }
+        mavenLocal()
+        mavenCentral()
+    }
+
     dependencies {
-        classpath ":gradle-model"
+        classpath "com.zlrx.visualizer:gradle-model:0.0.4"
     }
 }
-
 
 allprojects {
     apply plugin: com.zlrx.visualizer.gradle.model.GenericGradleModelPlugin
