--- a/dependency-visualizer-web/build.gradle
+++ b/dependency-visualizer-web/build.gradle
@@ -13,9 +13,14 @@ task copyDistToBackend(type: Copy) {
     into "$projectDir.parent/dependency-visualizer-backend/src/main/resources/static"
 }
 
-task webpack(type: NpmTask) {
+task install(type: NpmTask) {
+    args = ['install']
+}
+
+task webpack(type: NpmTask, dependsOn: install) {
     args = ['run', 'build']
 }
+
 
 webpack.finalizedBy copyDistToBackend
 
