--- a/dependency-visualizer-web/package.json
+++ b/dependency-visualizer-web/package.json
@@ -20,6 +20,7 @@
         "webpack-dev-server": "^2.9.7"
     },
     "dependencies": {
+      "axios": "^0.18.0",
         "d3": "^4.13.0",
         "d3-selection": "^1.3.0",
         "d3-shape": "^1.2.0",
