--- a/build.gradle
+++ b/build.gradle
@@ -14,13 +14,16 @@ buildscript {
     }
 }
 
+allprojects {
+    group = 'com.zlrx.gradle'
+    version = '0.1.1'
+}
+
 subprojects {
     apply plugin: 'idea'
     apply plugin: 'java'
     apply plugin: 'kotlin'
 
-    group = 'com.zlrx.gradle'
-    version = '0.1.1'
     sourceCompatibility = 1.8
 
     compileKotlin {
