--- a/dependency-visualizer-web/package.json
+++ b/dependency-visualizer-web/package.json
@@ -20,11 +20,13 @@
         "webpack-dev-server": "^2.9.7"
     },
     "dependencies": {
-      "axios": "^0.18.0",
+        "axios": "^0.18.0",
         "d3": "^4.13.0",
         "d3-selection": "^1.3.0",
         "d3-shape": "^1.2.0",
+        "lodash": "^4.17.5",
         "react": "^16.2.0",
+        "react-d3-tree": "^1.10.0",
         "react-dom": "^16.2.0",
         "react-redux": "^5.0.7",
         "react-router-dom": "^4.2.2",
