--- a/dependency-visualizer-web/package.json
+++ b/dependency-visualizer-web/package.json
@@ -24,10 +24,12 @@
         "d3": "^4.13.0",
         "d3-selection": "^1.3.0",
         "d3-shape": "^1.2.0",
+        "is-empty-object": "^1.1.1",
         "lodash": "^4.17.5",
         "react": "^16.2.0",
         "react-d3-tree": "^1.10.0",
         "react-dom": "^16.2.0",
+        "react-radio-buttons": "^1.2.1",
         "react-redux": "^5.0.7",
         "react-router-dom": "^4.2.2",
         "redux": "^3.7.2",
