--- a/dependency-visualizer-web/package.json
+++ b/dependency-visualizer-web/package.json
@@ -26,6 +26,7 @@
         "d3-shape": "^1.2.0",
         "is-empty-object": "^1.1.1",
         "lodash": "^4.17.5",
+      "material-ui": "^0.20.0",
         "react": "^16.2.0",
         "react-d3-tree": "^1.10.0",
         "react-dom": "^16.2.0",
